namespace Osiris.TimeTravelPuzzler.Interactable
{
    internal struct AnimationParameters
    {
        public const string DoorOpening = "Opening";
        public const string DoorClosing = "Closing";
        public const string IsOpen = "IsOpen";
        public const string Flicker = "Flicker";
    }
}
