namespace Osiris.TimeTravelPuzzler.Interactable.Doors.Animations
{
    internal struct AnimationParameters
    {
        public const string DoorOpening = "Opening";
        public const string DoorClosing = "Closing";
        public const string IsOpen = "IsOpen";
        public const string Flicker = "Flicker";
    }
}
